# MatrixBotTemplate

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
bot/: claude_integration.py  code_validator.py  config.py  git_integration.py  handlers.py  main.py  reload.py
bot/commands/: __init__.py  add.py  calculate.py  greetings.py  list.py  ping.py  remove.py  tldr.py  vibecode.py
tests/: __init__.py  conftest.py  test_code_validator.py  test_command_registry.py  test_handlers.py  test_timestamp_filter.py
tests/commands/: __init__.py  test_calculate.py  test_tldr.py  test_vibecode.py
