[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-echo-bot"
version = "0.1.0"
description = "Simple Matrix echo bot"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
